<resources>
    <string name="app_name"></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">202013709015 Seyfettin NARMAN</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">HOME</string>
    <string name="menu_label">Add Label</string>
    <string name="menu_photo">Add Photo</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_about">About</string>
</resources>