<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_add_label">

    <fragment
        android:id="@+id/nav_add_label"
        android:name="com.example.finaldeneme.ui.AddLabel.AddLabelFragment"
        android:label="@string/menu_label"
        tools:layout="@layout/fragment_add_label" />
    <fragment
        android:id="@+id/nav_add_photo"
        android:name="com.example.finaldeneme.ui.AddPhoto.AddPhotoFragment"
        android:label="@string/menu_photo"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.finaldeneme.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.finaldeneme.ui.Logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />
    <fragment
        android:id="@+id/About"
        android:name="com.example.finaldeneme.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />
</navigation>